# webos

./: .clang-format  .gitignore  AGENTS.md  README.md  west.yml
app/: .env  CMakeLists.txt  Kconfig  app.overlay  prj.conf  sample.yaml  sections-rom.ld  sysbuild.conf
app/src/: main.c  main.cpp
app/src/hal/wifi/: wifi.c  wifi.h
app/src/services/fs/: fs.c  fs.h
app/src/services/http/: http.c  http.h  http_handlers.c  http_handlers.h
app/src/services/iwasm/: iwasm.c  iwasm.h
app/src/services/log_buffer/: log_buffer.c  log_buffer.h
app/src/services/ota/: ota.c  ota.h
app/src/services/ssh/: ssh.c  ssh.h
app/src/utils/json/: json.c  json.h
app/sysbuild/: mcuboot.conf
boards/espressif/webos_esp32s3/: Kconfig  Kconfig.sysbuild  Kconfig.webos_esp32s3  board.yml  webos_esp32s3-pinctrl.dtsi  webos_esp32s3_procpu.dts  webos_esp32s3_procpu.yaml  webos_esp32s3_procpu_defconfig
docs/: idea.md  ram-load-ota.md
drivers/: CMakeLists.txt  Kconfig
drivers/blink/: gpio_led.c
drivers/sensor/example_sensor/: example_sensor.c
drivers/webos_gpio/: CMakeLists.txt  webos_gpio.c  webos_gpio.h
drivers/webos_rgbled/: CMakeLists.txt  Kconfig  webos_rgbled.c  webos_rgbled.h
dts/bindings/: vendor-prefixes.txt
dts/bindings/gpio/: webos,gpio.yaml
dts/bindings/led/: webos,rgbled.yaml
include/app/drivers/: blink.h
lib/: CMakeLists.txt  Kconfig
lib/custom/: custom.c
lib/devfs/: CMakeLists.txt  Kconfig  devfs.c  devfs.h
lib/webos_gpio/: Kconfig
sampleapps/blink/: Makefile  blink.wasm  main.c
sampleapps/hello/: Makefile  hello.wasm  main.c
sampleapps/native_blink/: Makefile  main.c  native_blink.wasm
tests/: curl_health.sh  curl_ota.sh  curl_push.sh  curl_pushbin.sh  curl_root.sh  curl_shell.sh
tests/lib/custom/src/: main.c
